# worthline

./: .env.example  .gitignore  .prettierignore  AGENTS.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  biome.json  bunfig.toml  eslint.config.mjs  package-lock.json  package.json  playwright.config.ts  playwright.demo.config.ts  playwright.first-run.config.ts  playwright.routing.config.ts  renovate.json  tsconfig.base.json  tsconfig.e2e.json  turbo.json  vercel.json  vitest.config.ts  vitest.shared.ts
.github/: PULL_REQUEST_TEMPLATE.md
.husky/: prepare-commit-msg
crates/worthline-core/: Cargo.toml
crates/worthline-core/parity/: generate-golden-vectors.ts
crates/worthline-core/src/: amortization.rs  dates.rs  decimal.rs  lib.rs  wasm.rs
crates/worthline-core/tests/: amortization.rs  parity_golden_vectors.rs  wasm_boundary.rs
crates/worthline-core/tests/fixtures/: golden-vectors.json
docs/: design-system.md  interaction-patterns.md  performance-budgets.md
e2e/: 00-route-migration.spec.ts  01-first-run-solo.spec.ts  02-first-run-hogar.spec.ts  03-create-asset.spec.ts  04-puesta-al-dia.spec.ts  05-investment-operation.spec.ts  06-scope-consistency.spec.ts  07-auto-snapshot.spec.ts  08-warning-lifecycle.spec.ts  09-delete-restore.spec.ts  10-ownership-validation.spec.ts  11-liquid-drilldown.spec.ts  12-rest-housing-drilldowns.spec.ts  13-donut-drilldown.spec.ts  14-hard-delete-trash.spec.ts  15-empty-trash.spec.ts  16-delete-operation.spec.ts  17-member-hard-delete.spec.ts  18-reset-workspace.spec.ts  19-export-workspace.spec.ts  20-import-replace.spec.ts  21-import-preview.spec.ts  22-import-onboarding.spec.ts  23-housing-valuation.spec.ts  24-debt-model.spec.ts  25-debts-drilldown.spec.ts  26-composition-range.spec.ts  27-early-repayment.spec.ts  28-holding-detail-fanout.spec.ts  29-unified-holdings-grouping.spec.ts  30-unified-add-holding.spec.ts  31-add-investment-saldo.spec.ts  31-binance-connected-source.spec.ts  32-price-refresh-meta.spec.ts  33-framing-toggle.spec.ts  34-pwa.spec.ts  35-home-fire-glance.spec.ts  36-objetivos-page.spec.ts  37-objetivos-crud.spec.ts  38-add-success-loop.spec.ts  (+14 more)
scripts/: backfill-exposure-catalog-stubs.ts  backfill-historical-snapshots.ts  capture-landing.ts  check-test-globs.ts  emit-next-server-cjs-marker.ts  generate-extractor-synthetic-fixture.ts  link-web-typescript-deps.ts  subset-web-fonts.sh  sync-pull.ts  sync-push.ts  sync-shared.ts  (+2 more)
(+993 files in other folders)
