[package]
name = "worthline-core"
version = "0.1.0"
edition = "2021"
description = "Portable Rust core for worthline's net-worth math. First slice: the French amortization engine (PRD #280, ADR 0019). Pure, no I/O, integer-minor-unit outputs at decimal parity with the big.js-backed TS engine."
license = "MIT"
publish = false

[dependencies]
bigdecimal = "0.4"
num-traits = "0.2"

[dev-dependencies]
# Test-only: the golden-vector parity gate (#287) reads its fixture as JSON.
# Kept out of the library so the WASM/edge target stays dependency-lean.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
